prompt modified & fixed cd

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,18 +1,18 @@
 # **************************************************************************** #
-#                                                                              #
-#                                                         :::      ::::::::    #
-#    Makefile                                           :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
-#    By: mmoya <mmoya@student.42.fr>                +#+  +:+       +#+         #
-#                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2017/11/09 17:06:46 by mmoya             #+#    #+#              #
-#    Updated: 2018/01/30 16:53:14 by mmoya       ###    #+. /#+    ###.fr      #
-#                                                                              #
+#                                                           LE - /             #
+#                                                               /              #
+#    Makefile                                         .::    .:/ .      .::    #
+#                                                  +:+:+   +:    +:  +:+:+     #
+#    By: mmoya <mmoya@student.le-101.fr>            +:+   +:    +:    +:+      #
+#                                                  #+#   #+    #+    #+#       #
+#    Created: 2017/11/09 17:06:46 by mmoya        #+#   ##    ##    #+#        #
+#    Updated: 2018/02/01 18:25:37 by mmoya       ###    #+. /#+    ###.fr      #
+#                                                          /                   #
+#                                                         /                    #
 # **************************************************************************** #
-
 NAME = libft.a
 
-HEAD = libft.h get_next_line.h
+HEAD = libft.h
 
 SRC = ft_atoi.c ft_bzero.c ft_isalnum.c ft_isalpha.c ft_isascii.c \
 ft_isdigit.c ft_isprint.c ft_isspace.c ft_itoa.c ft_memalloc.c ft_memccpy.c \
