--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,15 +1,15 @@
 # **************************************************************************** #
-#                                                                              #
-#                                                         :::      ::::::::    #
-#    Makefile                                           :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
-#    By: mmoya <mmoya@student.42.fr>                +#+  +:+       +#+         #
-#                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2017/11/09 17:06:46 by mmoya             #+#    #+#              #
-#    Updated: 2018/02/06 16:29:34 by mmoya            ###   ########.fr        #
-#                                                                              #
+#                                                           LE - /             #
+#                                                               /              #
+#    Makefile                                         .::    .:/ .      .::    #
+#                                                  +:+:+   +:    +:  +:+:+     #
+#    By: mmoya <mmoya@student.le-101.fr>            +:+   +:    +:    +:+      #
+#                                                  #+#   #+    #+    #+#       #
+#    Created: 2017/11/09 17:06:46 by mmoya        #+#   ##    ##    #+#        #
+#    Updated: 2018/02/06 18:05:58 by mmoya       ###    #+. /#+    ###.fr      #
+#                                                          /                   #
+#                                                         /                    #
 # **************************************************************************** #
-
 NAME = libft.a
 
 HEAD = libft.h
@@ -34,9 +34,9 @@ all: $(NAME)
 
 $(NAME): $(OBJ) $(HEAD) Makefile
 	@ar rcs $(NAME) $(OBJ)
-	@echo "\033[1m#------------------------------#"
-	@echo "|\033[34m         $(NAME) \033[37mDONE         |"
-	@echo "#------------------------------#\033[0m"
+	@echo "\033[1;42m┌──────────────────────────────┐\033[0m"
+	@echo "\033[1;42m│          libft DONE          │\033[0m"
+	@echo "\033[1;42m└──────────────────────────────┘\033[0m"
 
 %.o: $(SRCS)%.c
 	@gcc -Wall -Wextra -Werror -c $*.c
