--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: mmoya <mmoya@student.le-101.fr>            +:+   +:    +:    +:+      #
 #                                                  #+#   #+    #+    #+#       #
 #    Created: 2017/11/09 17:06:46 by mmoya        #+#   ##    ##    #+#        #
-#    Updated: 2018/05/25 16:56:06 by mmoya       ###    #+. /#+    ###.fr      #
+#    Updated: 2018/06/22 18:09:26 by mmoya       ###    #+. /#+    ###.fr      #
 #                                                          /                   #
 #                                                         /                    #
 # **************************************************************************** #
@@ -26,7 +26,7 @@ ft_tolower.c ft_toupper.c ft_strequ.c ft_strnequ.c ft_strsub.c ft_strjoin.c \
 ft_strtrim.c ft_strsplit.c ft_lstnew.c ft_lstiter.c ft_lstadd.c ft_lstmap.c \
 ft_lstdel.c ft_lstdelone.c ft_isblank.c ft_isupper.c ft_islower.c \
 ft_strndup.c ft_swap.c ft_print2dstr.c ft_sqrt.c ft_countdigit.c ft_ltoa.c \
-ft_strrealloc.c ft_strsplittrim.c get_next_line.c
+ft_strrealloc.c ft_strsplittrim.c ft_strsplittrimq.c get_next_line.c
 
 OBJ = $(SRC:.c=.o)
 
