updated Makefile & normed

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,13 +6,15 @@
 #    By: mmoya <mmoya@student.le-101.fr>            +:+   +:    +:    +:+      #
 #                                                  #+#   #+    #+    #+#       #
 #    Created: 2017/11/09 17:06:46 by mmoya        #+#   ##    ##    #+#        #
-#    Updated: 2018/09/26 17:35:27 by mmoya       ###    #+. /#+    ###.fr      #
+#    Updated: 2018/09/26 18:49:07 by mmoya       ###    #+. /#+    ###.fr      #
 #                                                          /                   #
 #                                                         /                    #
 # **************************************************************************** #
 NAME = libft.a
 
 HEAD = libft.h
+
+FLAG = -Wall -Wextra -Werror
 
 SRC = ft_atoi.c ft_bzero.c ft_isalnum.c ft_isalpha.c ft_isascii.c \
 ft_isdigit.c ft_isprint.c ft_isspace.c ft_itoa.c ft_memalloc.c ft_memccpy.c \
@@ -37,7 +39,7 @@ $(NAME): $(OBJ) $(HEAD) Makefile
 	ar rcs $(NAME) $(OBJ)
 
 %.o: $(SRCS)%.c
-	gcc -Wall -Wextra -Werror -c $*.c
+	gcc $(FLAG) -c $*.c
 
 clean:
 	rm -f $(OBJ)
